--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body{
 	font: 16px 'ProximaNovaCond-Semibold', sans-serif;
 	line-height: 20px;
 	word-wrap: break-word;
+  min-width: 1248px;
 }
 
 .wrap{
