--- a/css/style.css
+++ b/css/style.css
@@ -528,3 +528,39 @@ body{
     font-style: normal;
     padding-left: 0;
   }
+
+
+  /*************************Технології********************************/
+
+.technology-inner .container{
+  padding-bottom: 100px;
+}
+
+.technology-inner {
+  background: url(../img/bg.jpg) no-repeat #3e6d44;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: top;
+}
+
+.technology-inner h1{
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-weight: 100;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.technology-inner img{
+  max-width: 100%;
+  height: auto;
+}
+
+.technology-inner p{
+  font-size: 23px;
+  color: #ffffff;
+  margin: 30px;
+  line-height: 1.7;
+}
