--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body{
 	font: 16px 'ProximaNovaCond-Semibold', sans-serif;
 	line-height: 20px;
 	word-wrap: break-word;
-  min-width: 1248px;
 }
 
 .wrap{
@@ -108,12 +107,12 @@ body{
 	text-align: right;
 }
 
-.menu{
+.menu-top{
 	background: #3e6d44;
 	height: 40px;
 }
 
-.menu .cols.col-8{
+.menu-top .cols.col-8{
 	float: right;
 }
 
@@ -151,6 +150,77 @@ body{
 .main-menu .active{
   background: #ffffff;
   color: #2c9947;
+}
+
+
+/* Menu */
+
+.menu {
+  background: #4a676d;
+  left: -285px;
+  height: 100%;
+  position: fixed;
+  width: 285px;
+  top: 0;
+  z-index: 1000;
+}
+
+
+/* Basic CSS */
+
+.menu ul {
+
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  float: none;
+}
+
+.menu ul li {
+
+  line-height: 45px;
+  padding-bottom: 3px;
+  padding-left: 20px;
+  padding-top: 3px;
+  float: none;
+
+}
+
+.menu li:hover {
+  cursor: pointer;
+
+  }
+
+.menu ul li a {
+  color: #fff;
+  font-size: 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: left;
+  margin-right: 20px;
+  border-left: 1px solid #2c9947;
+  border-right: none;
+}
+
+.icon-close {
+  cursor: pointer;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 6px;
+}
+
+.icon-menu {
+  color: #fff;
+  cursor: pointer;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  padding-top: 13px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.icon-menu img {
+  margin-right: 5px;
 }
 
 /**********************slider*****************************************/
@@ -740,4 +810,273 @@ font-size: 23px;
 color: #ffffff;
 margin: 30px;
 line-height: 1.7;
+}
+
+
+
+/* Ландшафтный экран телефоны*/
+@media screen and (min-width: 300px) and (max-width: 479px) {
+  .menu-desc{
+    display: none;
+  }
+
+  .header-top{
+    height: 70px;
+  }
+
+  .menu-top .cols.col-8{
+  	float: right;
+    width: 10%;
+  }
+
+  #header .logo{
+    width: 35%;
+  }
+
+  #header .phone{
+    width: 65%;
+  }
+
+  .logo img{
+    height: 60px;
+  }
+
+  .header-top .phone ul{
+    margin-top: 10px;
+  }
+
+  .header-top .phone ul li{
+    font-size: 12px;
+    font-weight: bold;
+    line-height: normal;
+  }
+
+  .slogan h1{
+    margin-top: 25px;
+    line-height: normal;
+    font-size: 19px;
+  }
+
+  .technology .cols.col-6{
+    display: none;
+  }
+
+  .technology .cols.col-3{
+    width: 50%;
+    text-align: center;
+    font-size: 13px;
+  }
+
+  .border img{
+    margin: 20px auto;
+  }
+
+  .first img,
+  .second img{
+
+  }
+
+  .first p,
+  .second p{
+  font-size: 12px;
+  font-weight: bold;
+  }
+
+  #main .proects h2{
+    font-size: 25px;
+  }
+
+  #main .cols.col-4{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  #main .proects .btn-main{
+    width: 80%;
+  }
+
+  #footer h1{
+    font-size: 20px;
+    line-height: normal;
+    margin-top: 10px;
+  }
+
+  .img-proects img{
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 639px) {
+
+  .menu-desc{
+    display: none;
+  }
+
+  .menu-top .cols.col-8{
+  	float: right;
+    width: 10%;
+  }
+
+  .header-top{
+    height: 80px;
+  }
+
+  .menu-top .cols.col-8{
+  	float: right;
+    width: 10%;
+  }
+
+  .logo img{
+    height: 90px;
+  }
+
+  .header-top .phone ul{
+    margin-top: 20px;
+  }
+
+  .header-top .phone ul li{
+    font-size: 15px;
+    font-weight: bold;
+  }
+
+  .slogan h1{
+    margin-top: 22px;
+    line-height: normal;
+  }
+
+
+  .technology .cols.col-6{
+    display: none;
+  }
+
+  .technology .cols.col-3{
+    width: 50%;
+    text-align: center;
+    font-size: 13px;
+  }
+
+  .border img{
+    margin: 20px auto;
+  }
+
+    .first p,
+  .second p{
+  font-size: 12px;
+  font-weight: bold;
+  }
+
+  #main .proects h2{
+    font-size: 25px;
+  }
+
+  #main .cols.col-4{
+    width: 50%;
+    margin-bottom: 20px;
+  }
+
+  #main .cols.col-4:last-child{
+    display: none;
+  }
+
+  #main .proects .btn-main{
+    width: 80%;
+  }
+
+  #footer h1{
+    font-size: 20px;
+    line-height: normal;
+    margin-top: 10px;
+  }
+
+  .img-proects img{
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+  }
+
+
+}
+
+@media screen and (min-width: 640px) and (max-width: 800px) {
+  .icon-menu{
+    display: none;
+  }
+
+  .main-menu ul li a{
+    font-size: 13px;
+  }
+
+  .slogan h1{
+    line-height: normal;
+    margin-top:10px;
+  }
+
+  .technology .cols.col-3{
+    text-align: center;
+  }
+
+  .first p,
+  .second p{
+    font-size: 14px;
+
+    }
+
+    .img-tech img{
+      margin-top: 100px;
+    }
+
+    #main .cols.col-4{
+      width: 50%;
+    }
+
+    #main .cols.col-4:last-child{
+      display: none;
+    }
+
+    #main .proects .btn-main{
+      width: 50%;
+    }
+
+    .img-proects img{
+      text-align: center;
+      display: block;
+      margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 800px) and (max-width: 1023px) {
+  .icon-menu{
+    display: none;
+  }
+
+  .slogan h1{
+    line-height: normal;
+    margin-top:10px;
+  }
+
+  .technology .cols.col-3{
+    text-align: center;
+  }
+
+  #main .proects .btn-main{
+    width: 50%;
+  }
+
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1300px){
+
+  .icon-menu{
+    display: none;
+  }
+}
+
+/* Большой дисплей*/
+@media (min-width: 1268px) {
+  .icon-menu{
+    display: none;
+  }
 }
