--- a/css/style.css
+++ b/css/style.css
@@ -854,6 +854,7 @@ h3.city-name {
 	  line-height: 60px;
 	  font-size: 15px;
 		display: block;
+		text-align: center;
 	}
 
 	.send-description{
@@ -920,6 +921,11 @@ h3.city-name {
 
 	.copyright{
 		text-align: center;
+	}
+
+	.footer .soc-icons div{
+		width: 256px;
+		margin: 0 auto;
 	}
 
 	.footer .soc-icons a {
