--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,10 @@ body{
 	clear:both;
 }
 
+a[href^="tel"]{
+    color:inherit;
+    text-decoration:none;
+}
 
 /************************header***************************/
 
@@ -617,6 +621,10 @@ h3.city-name {
 		display: block;
 	}
 
+	.header-mobile-hidden{
+		display: none;
+	}
+
 	.header-mobile img{
 		height: 90px;
 		width: 90px;
@@ -625,7 +633,13 @@ h3.city-name {
 	}
 
 	.menu{
+		height: auto;
+		background: #ffffff;
+	}
+
+	.menu-container{
 		height: 60px;
+		background-color: #CDCDCD;
 	}
 
 	.phone-mobile{
@@ -652,6 +666,24 @@ h3.city-name {
 		background:#CDCDCD;
 		position: absolute;
 		width: auto;
+
+	}
+
+	.logo-fixed-m{
+		display: none;
+	}
+
+	.logo-fixed-m img{
+		width: 43px;
+		height: 44px;
+		margin: 0;
+		margin-top: 8px;
+		border: 2px solid #666666;
+		padding: 4px 2px;
+	}
+
+	.logo-hidden-m{
+		display: block ;
 	}
 
 	.border-ru{
