--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,10 @@ a[href^="tel"]{
 
 /**********************BANNER*******************************/
 
+.banner{
+	margin-top: 30px;
+}
+
 .banner .container{
   overflow: hidden;
   max-height: 450px;
@@ -1236,6 +1240,10 @@ h3.city-name {
 		display: block;
 	}
 
+	.banner-m-hidden{
+		margin-top: 133px;
+	}
+
 	.banner-m .container {
 		width: 100%;
 	  position: relative;
@@ -1641,6 +1649,10 @@ h3.city-name {
 		font-size: 16px;
 		line-height: normal;
 		font-weight: bold;
+	}
+
+	.banner-m-hidden{
+		margin-top: 133px;
 	}
 
 	.banner-m span{
