--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ a[href^="tel"]{
   width: 100%;
   background-color: #CDCDCD;
   height: 80px;
-  margin-bottom: 30px;
+
 }
 
 .f-menu{
@@ -122,9 +122,9 @@ a[href^="tel"]{
 	width: 100%;
 }
 
-.main-menu{
+/*.main-menu{
 	overflow: hidden;
-}
+}*/
 
 .menu .logo-fixed{
 	line-height: 80px;
@@ -188,32 +188,74 @@ a[href^="tel"]{
 	display: none;
 }
 
-.main-menu{
-  position: relative;
-}
-
-.main-menu ul{
+.main-menu .menu-font{
   list-style: none;
   text-decoration: none;
   margin: 0 auto;
   left:50%;
-  position:relative;
   float:left;
 	font-size: 16px;
+	position:relative;
 }
 
-.main-menu ul.font-fixed{
-	font-size: 15px;
-}
-
-.main-menu ul li{
+.main-menu .menu-font>li{
   display: inline-block;
   position:relative;
   left:-50%;
   float:left;
 }
 
-.main-menu ul li a{
+.drop-down{
+	position: absolute;
+	display: none;
+  top: 80px;
+	left: 0;
+  width: 100%;
+  z-index: 10000;
+	-webkit-transition: 0.5s ease-in-out;
+-moz-transition: 0.5s ease-in-out;
+-o-transition: 0.5s ease-in-out;
+transition: 0.5s ease-in-out;
+}
+
+.menu-font ul li {
+	float: none;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	background: #999999;
+	margin-bottom: 3px;
+}
+
+.menu-font ul li a{
+	line-height: 1;
+  font-size: 13px;
+  font-weight: normal;
+  height: 55px;
+  padding: 12px;
+  color: #ffffff;
+	text-decoration: none;
+	text-transform: uppercase;
+	display: block;
+}
+
+.menu-font li:hover .drop-down {
+	display: block; /* show dropdown on hover */
+}
+
+.main-menu .menu-font li a:hover{
+	color: #ffffff;
+}
+
+.menu-font .active .drop-down a{
+  color: #ffffff;
+}
+
+.main-menu .menu-font.font-fixed{
+	font-size: 15px;
+}
+
+.main-menu .menu-font>li>a{
   text-decoration: none;
   color: #999999;
   text-transform: uppercase;
@@ -221,7 +263,7 @@ a[href^="tel"]{
   line-height: 80px;
 }
 
-.main-menu ul .active a{
+.main-menu .menu-font .active a{
   color: #ffffff;
 }
 
@@ -643,6 +685,411 @@ h3.city-name {
     margin-right: 0;
 }
 
+/*******************онлайн***************************/
+
+.introduction{
+  height: 50px;
+	background: #F8F8F8;
+}
+
+.introduction-hidden{
+	margin-top: 80px;
+}
+
+.introduction .header-post{
+	line-height: 50px;
+	font-size: 30px;
+}
+
+.online {
+	padding-bottom: 50px;
+}
+
+.online img{
+	width: 100%;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.online .wpcf7-form{
+	margin-top: 20px;
+}
+
+input[type="text"], input[type="email"], input[type="password"], textarea{
+  padding: 1%;
+  border: 1px solid #EAEAEA;
+  line-height: 20px;
+  width: 70%;
+  margin: 0 0 30px;
+  background-color: #F8F8F8;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+
+input[type="submit"]{
+  color: #FFFFFF;
+  display: inline-block;
+  margin-bottom: 30px;
+  padding: 5px 25px;
+  -moz-appearance: none !important;
+  -webkit-appearance: none !important;
+  appearance: none !important;
+  cursor: pointer;
+  background-color: #fe0000;
+  border: 0px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  font-size: 16px;
+}
+
+input[type="checkbox"]{
+	margin-top: 20px;
+}
+
+.online h4{
+	margin-bottom: 30px;
+	margin-top: 30px;
+}
+
+
+/***********************лікування******************************/
+
+.container-tr {
+	font-family: 'ProximaNovaCond-Semibold', sans-serif;
+    position: relative;
+    display: block;
+    max-width: 1268px;
+    width: 50%;
+    padding: 0;
+    height: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+		margin-bottom: 30px;
+		margin-top: 30px;
+}
+
+/*
+* Формируем базовый контейнер аккордеона
+*/
+.accordion {
+    width: 100%;
+/*
+ширина произвольная выбирается
+*в зависимостиот места размещения
+*/
+    max-width: 100%;
+    min-height: 0;
+    display: block;
+/* относительное позиционирование */
+    position: relative;
+    margin: 0 auto;
+    padding: 0;
+    background-color: #ffffff;
+    overflow: hidden
+}
+
+.accordion-inner{
+	width: 90%;
+/*
+ширина произвольная выбирается
+*в зависимостиот места размещения
+*/
+    max-width: 1200px;
+    min-height: 0;
+    display: block;
+/* относительное позиционирование */
+    position: relative;
+    margin: 20px auto;
+    padding: 0;
+    background-color:#f8f8f8;
+    overflow: hidden;
+
+}
+
+/* заголовки панелей аккордеона */
+.accordion h2 {
+    font-size: 16px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    display: block;
+    margin: 0;
+    padding: 10px 25px;
+    cursor: pointer;
+    color: #E73E97;
+    background: #f8f8f8;
+    border-top: 1px solid #ffffff;
+    border-bottom: 1px solid #ffffff;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+/* заголовки панелей аккордеона при наведении
+* в данном варианте не срабатывает
+*/
+/* .accordion h2:hover {
+    display: block;
+    background-color: #005049;
+}
+*/
+
+
+.accordion-inner h3 {
+    font-size: 16px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    display: block;
+    margin: 0;
+    padding: 10px 25px;
+    cursor: pointer;
+    color: #666;
+    background: #ffffff;
+    border: 1px solid #f8f8f8;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+	margin-bottom:1px;
+}
+
+/* Формируем блоки с содерханием */
+.msg {
+  position: relative;
+  overflow: hidden;
+  max-height: 800px;
+  opacity: 1;
+  transform: translate(0, 0);
+
+}
+
+/* оформляем параграфы */
+.msg p {
+  color: #666;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: normal;
+  padding: 0 20px;
+}
+
+/*********************blog_prew**************************/
+
+#rpwe_widget-3 .title-pres-blog a{
+	font-size:18px;
+}
+
+#rpwe_widget-3 .img-prew-blog{
+	float:left;
+	width:110px;
+	height:110px;
+	overflow:hidden;
+	margin-right:15px;
+}
+
+#rpwe_widget-3 .prew-blog{
+	margin-bottom:15px;
+}
+
+#rpwe_widget-3 .descr-prew-blog time{
+	font-size:15px;
+	display:block;
+	margin-bottom:10px;
+}
+
+/* Позаботимся о небольших экранах */
+@media (max-width: 550px) {
+  .accordion {
+    box-sizing: border-box;
+    transform: translate(0, 0);
+    max-width: 100%;
+    min-height: 100%;
+    margin: 0;
+    left: 0;
+  }
+}
+
+/* Формируем неупорядоченный список */
+.accordion ul {
+  list-style: none;
+  perspective: 900;
+  padding: 0;
+  margin: 0;
+}
+
+/* Определяем и формируем отдельный элемент списка
+ * в который поместим скрытый флажек,
+ * заголовок панелей и блок с содержанием
+*/
+.accordion ul li {
+  position: relative;
+  padding: 0;
+  margin: 0;
+}
+
+/* устанавливаем время ожидания перед воспроизведением анимации
+ * на основе нумерации в дереве элементов
+*/
+.accordion ul li:nth-of-type(1) {
+  animation-delay: 0.5s;
+}
+.accordion ul li:nth-of-type(2) {
+  animation-delay: 0.75s;
+}
+.accordion ul li:nth-of-type(3) {
+  animation-delay: 1s;
+}
+.accordion ul li:last-of-type {
+  padding-bottom: 0;
+}
+
+/* Сформируем  указатель переключения состояния аккордеона */
+.accordion ul li i {
+  position: absolute;
+  transform: translate(-6px, 0);
+  margin-top: 16px;
+/* расположим указатель на панели заголовка справа */
+  right: 25px;
+
+}
+
+/****************************прибрати********************************/
+
+.accordion-inner i{
+	display:none;
+}
+
+.accordion-inner .msg{
+	display:none;
+}
+
+/****************************прибрати кінець********************************/
+
+/* "Рисуем " сам указатель */
+.accordion ul li i:before, .accordion ul li i:after {
+  content: "";
+  position: absolute;
+  background-color: #333;
+  width: 3px;
+  height: 9px;
+}
+/* Добавляем элемент трансформации указателя при переключении */
+.accordion ul li i:before {
+  transform: translate(-2px, 0) rotate(45deg);
+}
+.accordion ul li i:after {
+  transform: translate(2px, 0) rotate(-45deg);
+}
+
+/* Делаем чекбокс скрытым*/
+.accordion ul li input[type=checkbox] {
+  position: absolute;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+}
+/* Когда у флажка установлен checked
+ * блок с содержанием скрыт
+*/
+.accordion ul li input[type=checkbox]:checked ~ div.msg {
+  margin-top: 0;
+  max-height: 0;
+  opacity: 0;
+  transform: translate(0, 50%);
+}
+/* А указатель показывает вниз */
+.accordion ul li input[type=checkbox]:checked ~ i:before {
+  transform: translate(2px, 0) rotate(45deg);
+}
+.accordion ul li input[type=checkbox]:checked ~ i:after {
+  transform: translate(-2px, 0) rotate(-45deg);
+}
+/*  Устанавливаем эффект перехода
+ * между двумя состояниями указателя
+*/
+div.msg, ul li i:before, ul li i:after {
+
+}
+/**
+ * Изображения внутри аккордеона
+ * ...сделаем их отзывчивыми
+ */
+.accordion .msg img {
+    width: 100%;
+    height: auto;
+    -moz-box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+/* полноразмерная картинка */
+.msg img .large-img {
+    width: 100%;
+    margin-bottom: 10px;
+}
+/* миниатюра слева */
+ .msg img.img-left {
+    width: 25%;
+    float:left;
+    margin:5px 15px 5px 0;
+}
+/* миниатюра справа */
+.msg img.img-right {
+    width: 25%;
+    float:right;
+    margin:5px 0 5px 15px;
+}
+
+/* Встраеваемое видео */
+.video-responsive {
+    margin: 20px;
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    -moz-box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+}
+/* Предусмотри использование кода встраиваемого видео
+ *через iframe, object или embed */
+.video-responsive iframe,
+.video-responsive object,
+.video-responsive embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+/*****************про нас*******************************/
+
+
+.aboutus{
+	margin-top: 30px;
+	font-size: 17px;
+}
+
+.aboutus p{
+	margin-bottom: 20px;
+}
+
+.aboutus img{
+	float: left;
+	margin: 15px;
+	margin-left: 0;
+	margin-top: 0;
+}
+
+.aboutus .img-2{
+	float: right;
+	margin: 15px;
+	margin-right: 0;
+}
 
 @media screen and (min-width: 300px) and (max-width: 479px) {
 
@@ -1032,6 +1479,24 @@ h3.city-name {
 	    margin-right: 9px;
 	}
 
+	input[type="text"], input[type="email"], input[type="password"], textarea{
+	  padding: 1%;
+	  border: 1px solid #EAEAEA;
+	  line-height: 20px;
+	  width:98%;
+	}
+
+  .introduction-hidden{
+		margin-top: 130px;
+	}
+
+	.container-tr {
+		width: 100%;
+	}
+
+	.aboutus img{
+		width: 100%;
+	}
 
 }
 
@@ -1423,6 +1888,25 @@ h3.city-name {
 	    margin-right: 9px;
 	}
 
+	input[type="text"], input[type="email"], input[type="password"], textarea{
+		padding: 1%;
+		border: 1px solid #EAEAEA;
+		line-height: 20px;
+		width:98%;
+	}
+
+	.introduction-hidden{
+		margin-top: 130px;
+	}
+
+	.container-tr {
+		width: 100%;
+	}
+
+	.aboutus img{
+		width: 100%;
+	}
+
 }
 
 @media screen and (min-width: 640px) and (max-width: 800px) {
@@ -1811,6 +2295,25 @@ h3.city-name {
 
 	.footer .soc-icons a:first-child{
 			margin-right: 9px;
+	}
+
+	input[type="text"], input[type="email"], input[type="password"], textarea{
+		padding: 1%;
+		border: 1px solid #EAEAEA;
+		line-height: 20px;
+		width:98%;
+	}
+
+	.introduction-hidden{
+		margin-top: 130px;
+	}
+
+	.container-tr {
+		width: 100%;
+	}
+
+	.aboutus img{
+		width: 100%;
 	}
 
 }
