--- a/css/style.css
+++ b/css/style.css
@@ -307,17 +307,19 @@ transition: 0.5s ease-in-out;
 	z-index: 1000;
 }
 
-#inline { display: none; width: 600px; }
+#inline {
+	display: none;
+	width: 500px;
+	font-family: 'Proxima Nova Rg';
+ }
 
-label { margin-right: 12px; margin-bottom: 9px; color: #646464; font-size: 1.2em; }
+label { margin-right: 12px; margin-bottom: 9px; color: #6666664; font-size: 1.2em; }
 
 .txt {
 display: inline-block;
-color: #676767;
-width: 420px;
-font-family: Arial, Tahoma, sans-serif;
+color: #666666;
+width: 400px;
 margin-bottom: 10px;
-border: 1px dotted #ccc;
 padding: 5px 9px;
 font-size: 1.2em;
 line-height: 1.4em;
@@ -326,12 +328,10 @@ line-height: 1.4em;
 .txtarea {
 display: block;
 resize: none;
-color: #676767;
-font-family: Arial, Tahoma, sans-serif;
+color: #666666;
 margin-bottom: 10px;
-width: 500px;
+width: 400px;
 height: 150px;
-border: 1px dotted #ccc;
 padding: 5px 9px;
 font-size: 1.2em;
 line-height: 1.4em;
@@ -343,42 +343,17 @@ input.error, textarea.error { border-color: #973d3d; border-style: solid; backgr
 input.error:focus, textarea.error:focus { border-color: #973d3d; color: #a35959; }
 
 #send {
-color: #dee5f0;
+color: #ffffff;
 display: block;
 cursor: pointer;
 padding: 5px 11px;
 font-size: 1.2em;
-border: solid 1px #224983;
-border-radius: 5px;
-background: #1e4c99;
-background: -webkit-gradient(linear, left top, left bottom, from(#2f52b7), to(#0e3a7d));
-background: -moz-linear-gradient(top, #2f52b7, #0e3a7d);
-background: -webkit-linear-gradient(top, #2f52b7, #0e3a7d);
-background: -o-linear-gradient(top, #2f52b7, #0e3a7d);
-background: -ms-linear-gradient(top, #2f52b7, #0e3a7d);
-background: linear-gradient(top, #2f52b7, #0e3a7d);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2f52b7', endColorstr='#0e3a7d');
+border-radius: none;
+border: none;
+background: #fe0000;
+font-family: 'Proxima Nova Rg';
 }
-#send:hover {
-background: #183d80;
-background: -webkit-gradient(linear, left top, left bottom, from(#284f9d), to(#0c2b6b));
-background: -moz-linear-gradient(top,  #284f9d, #0c2b6b);
-background: -webkit-linear-gradient(top, #284f9d, #0c2b6b);
-background: -o-linear-gradient(top, #284f9d, #0c2b6b);
-background: -ms-linear-gradient(top, #284f9d, #0c2b6b);
-background: linear-gradient(top, #284f9d, #0c2b6b);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#284f9d', endColorstr='#0c2b6b');
-}
-#send:active {
-color: #8c9dc0;
-background: -webkit-gradient(linear, left top, left bottom, from(#0e387d), to(#2f55b7));
-background: -moz-linear-gradient(top,  #0e387d,  #2f55b7);
-background: -webkit-linear-gradient(top, #0e387d, #2f55b7);
-background: -o-linear-gradient(top, #0e387d, #2f55b7);
-background: -ms-linear-gradient(top, #0e387d, #2f55b7);
-background: linear-gradient(top, #0e387d, #2f55b7);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0e387d', endColorstr='#2f55b7');
-}
+
 
 /**********************BANNER*******************************/
 
