--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,17 @@ a[href^="tel"]{
 	display: none;
 }
 
-#example1{
+.fadeInUp{
 	color: #fe0000;
 	font-size: 33px;
 	text-align: right;
 	line-height: 150px;
+	z-index: -1;
+	position: relative;
 }
+
+
+
 
 /*********************menu************************/
 
